--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
 *{
     
     font-family: sans-serif;
-    
+    box-sizing: border-box;
+    margin: 0px;
 }
 .main{
     background-color: blue;
+    background-size: cover;
+    height: 100vh;
 }
 .navbar{
     width: 85%;
@@ -23,13 +26,7 @@
     text-decoration: none;
     color:#fff ;
 }
-.container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 50px;
-    border-radius: 10px;
-}
+
 .left{
     display: flex;
     flex-direction: column;
@@ -121,4 +118,35 @@ input[type="checkbox"] {
   }
   .form-check-label {
     margin-bottom: 0;
+  }
+  @media (max-width: 768px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        padding: 50px;
+        border-radius: 10px;
+    }
+    *{
+        padding: 50px;
+    }
+    .right{
+        order: 1;
+        margin-top: 40px;
+    }
+    .left{
+        margin-bottom: 50px;
+    }
+  }
+  /* Landscape view screens */
+  @media (min-width: 768px) and (orientation: landscape) {
+    .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 50px;
+        border-radius: 10px;
+    }
+    
   }
